Cambiar nombre a la clase main

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=POO4_P1_Barrios_Centeno_Moreno
-main.class=poo4_p1_barrios_centeno_moreno.POO4_P1_Barrios_Centeno_Moreno
+main.class=poo4_p1_barrios_centeno_moreno.main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
