--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -75,7 +75,7 @@ main.class=poo4_p1_barrios_centeno_moreno.POO4_P1_Barrios_Centeno_Moreno
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_20
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
