--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -75,7 +75,7 @@ main.class=poo4_p1_barrios_centeno_moreno.main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_20
+platform.active=Temurin_20.0.2_9
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
