Restructurando el código

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,11 +71,11 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=POO4_P1_Barrios_Centeno_Moreno
-main.class=poo4_p1_barrios_centeno_moreno.main
+main.class=main.Sistema
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Temurin_20.0.2_9
+platform.active=JDK_20
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
